Fixed basic layout issues. Looks good but not finished.  Please enter the commit message for your changes. Lines starting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,28 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
-
-body {
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-	font-color: #777777;
-	text-align: center;
+img {
+	margin-right:  10px;
 }
-
-.div-top-middle {
+h2, h3, h4 {
+	font-family: Georgia, Times, "Times New Roman", serif;
+}
+h2 {
+	height: 60;
+	width: 120;
+	background: #4aaaa5;
+	color: #fff;
+}
+p {
+	text-align: left;
+	color: #777777;
+}
+/*HEADER AREA*/
+.header-top-middle {
+	overflow: auto;
 	width: 960px;
-	margin: auto;
+	background: #fff;
+	margin: 0 auto;
 }
 .name {
 	float: left;
@@ -23,55 +35,40 @@ body {
 	width: 25%;
 	padding: 15px 15px 15px 15px;
 }
-a {
-	text-decoration: none;
-	color: #777777;
+/*CONTENT AREA*/
+.div-content-bgrnd-color {
+	background-color: #ddd;
 }
 .div-content {
-	border: 1px solid blue;
 	width: 960px;
+	height: 400px;
+	background-color: #ffffff;
 	margin: auto;
-	margin-top: 25px;
-	margin-bottom: 25px;
-	overflow:auto;
-	clear: left;
-	/*background: #dddddd;*/
+	border: solid 1px black;/*remove later*/
+}
+body {
+	font-size: 16px;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-color: #777777;
+	text-align: center;
+
 }
 .me_description {
-	border: 1px solid black;
+	border: 1px solid black; /*remove later*/
 	float: left;
 	padding: 25px;
 	width: 650px;
 }
 .connection-links {
-	border: 1px solid black;
+	border: 1px solid black; /*remove later*/
 	float: right;
 	width: 25%;
 }
-img {
-	margin-right:  10px;
-}
-
-h2, h3, h4 {
-	font-family: Georgia, Times, "Times New Roman", serif;
-}
-h2 {
-	height: 60;
-	width: 120;
-	background: #4aaaa5;
-	color: #fff;
-}
-h3, h4 {
-	text-align: left;
-	color: #4aaaa5;
-}
-p {
-	text-align: left;
-	color: #777777;
-}
+/*FOOTER AREA*/
 footer {
 	clear:left;
 	background-color: #666666;
 	padding: 25px;
 	color: #fff;
+	border-top: solid 10px #4aaaa5;
 }
